# minitasks

./: .gitignore  CMakeLists.txt  FindCZMQ.cmake  FindCZMQPP.cmake  FindRules.cmake  FindZeroMQ.cmake  README.md  index.html  info.yaml  params.json
config/: README.md  basic.ini
doc/: CMakeLists.txt  Doxyfile.in  README.md  header.tex.in  md_filter.awk.in
image/: CMakeLists.txt
src/: CMakeLists.txt  README.md  base_exception.hpp  main.cpp  main.hpp  plugin.cpp  plugin.hpp  program_options.cpp  program_options.hpp  version.hpp.in
src/basic/: CMakeLists.txt  README.md  basic.cpp  basic.hpp
test/: CMakeLists.txt  README.md  testMain.cpp  version.hpp.in
tools/: README.md
